# dsa-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PRD_dsa-flaggers-api.md  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_issue.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
apps/api/: deps.py  main.py
apps/scraper/: __main__.py  export.py  fetch.py  ingest.py  parse.py  publish.py  watchdog.py
core/: config.py  db.py  enums.py  models.py  normalize.py  notify.py  observability.py  ratelimit.py  timestamps.py
k8s/: README.md  api-deployment.yaml  api-ingress.yaml  api-service.yaml  migrations-job.yaml  namespace.yaml  scraper-cronjob.yaml  watchdog-cronjob.yaml
migrations/: env.py
migrations/versions/: edce10f23379_initial_schema.py
prds/active/: PRD_dsa-api-monetization.md  PRD_dsa-flaggers-api.md
site/: index.html
tests/: conftest.py  test_api.py  test_api_badges.py  test_api_changes.py  test_api_stats.py  test_api_trusted_flaggers.py  test_api_waitlist_post.py  test_config.py  test_cors.py  test_data_updated_at_header.py  test_enums.py  test_export.py  test_fetch.py  test_ingest.py  test_models.py  test_normalize.py  test_notify.py  test_observability.py  test_parse.py  test_publish.py  test_ratelimit.py  test_root_route.py  test_waitlist.py  test_watchdog.py
(+7 files in other folders)
