[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-api"
version = "0.0.1"
description = "Machine-readable mirror of the EU Trusted Flaggers register (DSA Article 22(5))."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Martin" }]

[tool.setuptools.packages.find]
include = ["apps*", "core*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "SIM",
    "TID",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"migrations/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
